--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "@fortawesome/free-solid-svg-icons": "5.13.1",
     "@fortawesome/react-fontawesome": "0.1.11",
     "@material-ui/core": "4.11.0",
+    "axios": "^0.19.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-modal": "^3.11.2",
+    "react-redux": "^7.2.0",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "typescript": "3.8.3"
