Carousel rendering and redux store structure refactored

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "3.0.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
     "typescript": "3.8.3"
