--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-solid-svg-icons": "5.13.1",
     "@fortawesome/react-fontawesome": "0.1.11",
     "@material-ui/core": "4.11.0",
+    "@reduxjs/toolkit": "^1.4.0",
     "axios": "^0.19.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
