--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.4.0",
     "axios": "^0.19.2",
     "react": "16.12.0",
+    "react-device-detect": "^1.13.1",
     "react-dom": "16.12.0",
     "react-modal": "^3.11.2",
     "react-redux": "^7.2.0",
