Cards flicker bug fix|have to fix the excessive VideoModal rendering + start unit tests

--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "reselect": "^4.0.0"
   },
   "devDependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "react-test-renderer": "^16.13.1",
     "typescript": "3.8.3"
   },
   "scripts": {
