--- a/package.json
+++ b/package.json
@@ -24,13 +24,12 @@
     "reselect": "^4.0.0"
   },
   "devDependencies": {
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "react-test-renderer": "^16.13.1",
+    "cypress": "^4.12.1",
     "typescript": "3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
+    "cypress": "cypress open",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
