--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "cypress": "^4.12.1",
+    "gh-pages": "^3.1.0",
     "typescript": "3.8.3"
   },
   "scripts": {
