--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "netflix-clone",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://azazel5.github.io/NetflixClone/",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
@@ -33,7 +34,9 @@
     "cypress": "cypress open",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm build", 
+    "deploy": "gh-pages -d build"
   },
   "browserslist": [
     ">0.2%",
