--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "predeploy": "npm build", 
+    "predeploy": "npm run build", 
     "deploy": "gh-pages -d build"
   },
   "browserslist": [
